RESOLVED FIXED224491
Fix typo in GPUProcessConnection::enableVP9Decoders()
https://bugs.webkit.org/show_bug.cgi?id=224491
Summary Fix typo in GPUProcessConnection::enableVP9Decoders()
Chris Dumez
Reported 2021-04-13 09:58:26 PDT
Fix typo in GPUProcessConnection::enableVP9Decoders().
Attachments
Patch (1.56 KB, patch)
2021-04-13 09:59 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-04-13 09:59:37 PDT
Peng Liu
Comment 2 2021-04-13 10:04:48 PDT
Comment on attachment 425880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=425880&action=review > Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:271 > + m_enableVP8Decoder = enableVP8Decoder; Thanks for the fix. By the way, not relevant to this bug, I think we can use a better function name, e.g., enableVPxDecoders(). :-)
Darin Adler
Comment 3 2021-04-13 10:05:38 PDT
Comment on attachment 425880 [details] Patch Surprised there is no symptom of this bug. Seems like we might be able to test it.
Chris Dumez
Comment 4 2021-04-13 10:10:02 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 425880 [details] > Patch > > Surprised there is no symptom of this bug. Seems like we might be able to > test it. It may well be but I'd appreciate if a media person could take a look at that. I uploaded a fix because the issue was spotted during a review on one of my patch. However, I am not familiar with this code at all. That said, I think the bug would be fairly subtle since we're sending the correct value over IPC. We're merely caching the wrong value on the connection. I guess the bug would be when changing the setting value. In some cases, it may not take the change into account on GPUProcess side.
EWS
Comment 5 2021-04-13 10:42:43 PDT
Committed r275893 (236458@main): <https://commits.webkit.org/236458@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425880 [details].
Radar WebKit Bug Importer
Comment 6 2021-04-13 10:43:13 PDT
Note You need to log in before you can comment on or make changes to this bug.