Fix typo in GPUProcessConnection::enableVP9Decoders() https://bugs.webkit.org/show_bug.cgi?id=224491

Reviewed by Darin Adler.

* WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::enableVP9Decoders):


Canonical link: https://commits.webkit.org/236458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275893 268f45cc-cd09-0410-ab3c-d52691b4dbfc